fix: overflow in footer

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,19 +4,6 @@ $head-foot-color: #2d353c;
 $murupolku: #fafafa;
 $teksti-color: #333;
 
-
-html {
-  height: 100%;
-}
-
-body {
-  position: relative;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 48px;
-}
-
 .header,
 .footer {
   background-color:$head-foot-color;
